error.log
rm -f *.o *.gch *.stackdump *.exe inter.tab.c inter.tab.h interpreter
bison -d inter.y
flex inter.l
cc -o assembly inter.tab.c lex.yy.c -lfl
inter.tab.c: In function ‘yyparse’:
inter.tab.c:1162:16: warning: implicit declaration of function ‘yylex’ [-Wimplicit-function-declaration]
       yychar = yylex ();
                ^
inter.tab.c:1299:7: warning: implicit declaration of function ‘yyerror’ [-Wimplicit-function-declaration]
       yyerror (YY_("syntax error"));
       ^
inter.y: At top level:
inter.y:54:1: warning: return type defaults to ‘int’ [-Wimplicit-int]
 yyerror(){}
 ^
inter.l: In function ‘yylex’:
inter.l:56:32: error: expected ‘;’ before ‘return’
 "$"\-?[0-9]     { yylval.value = atoi(yytext)  return imed; }
                                ^
inter.l: At top level:
inter.l:69:1: warning: return type defaults to ‘int’ [-Wimplicit-int]
     yylex();
 ^
Makefile:10: recipe for target 'assembly' failed
make: *** [assembly] Error 1
